sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: type mismatch;
 found   : Double
 required: Int
	var ecart:Double = int2double(Math.floor(getNombreValeurs()-1/2))
                                                ^AlgShellSort:15: error: type mismatch;
 found   : Int
 required: ?{def -(x$1: ? >: Double): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def -(x$1: ? >: Double): ?}
			cpt=cpt-ecart
                            ^AlgShellSort:15: error: overloaded method value - with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
			cpt=cpt-ecart
                               ^